--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".ui.main.MyJobService"
+            android:label="My service"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
+        <service android:name=".ui.main.MyIntentService"/>
+
+        <receiver android:name=".ui.main.MainBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.LOCALE_CHANGED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
